--- a/end-to-end-development.html
+++ b/end-to-end-development.html
@@ -48,7 +48,7 @@
   <div class="section-new services-definition">
     <div class="wrapper services-definition w-container">
       <div class="div-services-definition left-column">
-        <div class="text-h2 black left">Back End Dev is building the base &amp; dimensions of a product</div>
+        <div class="text-h2 black left">Back-end Development is building the base &amp; dimensions of a product</div>
       </div>
       <div class="div-services-definition right-column">
         <div class="text-h4---22px black">From design to development to implemation support, our consultants can do it all.</div>
@@ -69,7 +69,7 @@
       </div>
     </div>
   </div>
-  <div class="section-new black">
+  <div class="section-new black" id="testing-tab">
     <div class="wrapper w-container">
       <div class="w-layout-grid grid-2-column">
         <div class="text-h2">Understanding the system</div>
@@ -108,7 +108,7 @@
       </div>
     </div>
   </div>
-  <div class="section-new beige" id="testing-tab">
+  <div class="section-new beige">
     <div class="wrapper w-container">
       <div data-animation="cross" data-duration="500" data-infinite="1" class="slider-services-2 w-slider">
         <div class="mask w-slider-mask">
