--- a/ui-design.html
+++ b/ui-design.html
@@ -196,7 +196,7 @@
               <div class="text-h2-2 black left">Visual Design System</div>
               <div>
                 <div class="text-h3-3 black">The standard that define the companies branding in reference to Theme/Colour 
-                  usage, fonts styles, visuals in accordance with the Product Typography even extending to tone and grammar. 
+                  usage, fonts styles, visuals in accordance with the Product Topography even extending to tone and grammar. 
                   A well defined interface brings attention and notice to the Product even among thousands of other brands.</div>
               </div>
             </div>
@@ -261,7 +261,7 @@
         <div class="text-h2-2 black left">Visual Design System</div>
         <div>
           <div class="text-h3-3 black">The standard that define the companies branding in reference to Theme/Colour usage, 
-            fonts styles, visuals in accordance with the Product Typography even extending to tone and grammar. 
+            fonts styles, visuals in accordance with the Product Topography even extending to tone and grammar. 
             A well defined interface brings attention and notice to the Product even among thousands of other brands.</div>
         </div>
       </div>
