--- a/ui-development.html
+++ b/ui-development.html
@@ -72,7 +72,7 @@
       </div>
     </div>
   </div>
-  <div class="section-new black">
+  <div class="section-new black" id="testing-tab">
     <div class="wrapper w-container">
       <div class="w-layout-grid grid-2-column">
         <div class="text-h2">Business Understanding</div>
@@ -123,7 +123,7 @@
       </div>
     </div>
   </div>
-  <div class="section-new beige" id="testing-tab">
+  <div class="section-new beige">
     <div class="wrapper w-container">
       <div data-animation="cross" data-duration="500" data-infinite="1" class="slider-services-2 w-slider">
         <div class="mask w-slider-mask">
