--- a/blogs.html
+++ b/blogs.html
@@ -36,7 +36,7 @@
       <div class="heading-container">
         <div class="text-h1">MINTify your thoughts with our latest blogs and articles</div>
       </div>
-      <div class="text-h3 black">For more blogs like this checkout our Medium</div>
+      <div class="text-h3 black">For more blogs like this checkout our <a href="https://medium.com/uxmint" target="_blank" style="color: #fa4e2e;">Medium</a></div>
     </div>
   </div>
   <div class="section-new">
