--- a/ui-development.html
+++ b/ui-development.html
@@ -54,19 +54,19 @@
       <div class="div-services-definition right-column">
         <div class="text-h4---22px black">Helping the business reach the customers seamlessly to provide omni-channel experience.</div>
         <div class="w-layout-grid grid-usability-methods">
-          <div class="grid-item-usability-methods"><img src="images/Group 6482.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods"><img src="images/Group 6482.svg" loading="lazy" alt="" class="icons-usability-methods icon1">
             <div>Understanding <br>Business</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6486.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods"><img src="images/Group 6486.svg" loading="lazy" alt="" class="icons-usability-methods icon2">
             <div>Platform</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6490.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods"><img src="images/Group 6490.svg" loading="lazy" alt="" class="icons-usability-methods icon3">
             <div>Framework</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6483.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods"><img src="images/Group 6483.svg" loading="lazy" alt="" class="icons-usability-methods icon4">
             <div>Manage</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6502.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods"><img src="images/Group 6502.svg" loading="lazy" alt="" class="icons-usability-methods icon5">
             <div>Testing</div>
           </div>
         </div>
@@ -94,31 +94,31 @@
         </a>
       </div>
       <div class="w-layout-grid grid-development">
-        <div class="div-dev-icons"><img src="images/Icon-feather-globe_1.svg" loading="lazy" alt="" class="icons-development">
+        <div class="div-dev-icons dev-icon1"><img src="images/Icon-feather-globe_1.svg" loading="lazy" alt="" class="icons-development">
           <div class="text-h3 black">Website</div>
         </div>
-        <div class="div-dev-icons"><img src="images/Group-5780.svg" loading="lazy" alt="" class="icons-development">
+        <div class="div-dev-icons dev-icon2"><img src="images/Group-5780.svg" loading="lazy" alt="" class="icons-development">
           <div class="text-h3 black">Android</div>
         </div>
-        <div class="div-dev-icons"><img src="images/Group-5779.svg" loading="lazy" alt="" class="icons-development">
+        <div class="div-dev-icons dev-icon3"><img src="images/Group-5779.svg" loading="lazy" alt="" class="icons-development">
           <div class="text-h3 black">iOS</div>
         </div>
-        <div class="div-dev-icons"><img src="images/Group-5778.svg" loading="lazy" alt="" class="icons-development">
+        <div class="div-dev-icons dev-icon4"><img src="images/Group-5778.svg" loading="lazy" alt="" class="icons-development">
           <div class="text-h3 black">Windows</div>
         </div>
-        <div class="div-dev-icons"><img src="images/Group-5777.svg" loading="lazy" alt="" class="icons-development">
+        <div class="div-dev-icons dev-icon5"><img src="images/Group-5777.svg" loading="lazy" alt="" class="icons-development">
           <div class="text-h3 black">Hybrid Apps</div>
         </div>
-        <div class="div-dev-icons"><img src="images/Group-5785.svg" loading="lazy" alt="" class="icons-development">
+        <div class="div-dev-icons dev-icon6"><img src="images/Group-5785.svg" loading="lazy" alt="" class="icons-development">
           <div class="text-h3 black">HTML 5</div>
         </div>
-        <div class="div-dev-icons"><img src="images/Group-5784.svg" loading="lazy" alt="" class="icons-development">
+        <div class="div-dev-icons dev-icon7"><img src="images/Group-5784.svg" loading="lazy" alt="" class="icons-development">
           <div class="text-h3 black">Angular</div>
         </div>
-        <div class="div-dev-icons"><img src="images/Group-5786.svg" loading="lazy" alt="" class="icons-development">
+        <div class="div-dev-icons dev-icon8"><img src="images/Group-5786.svg" loading="lazy" alt="" class="icons-development">
           <div class="text-h3 black">React</div>
         </div>
-        <div class="div-dev-icons"><img src="images/Group-5787.svg" loading="lazy" alt="" class="icons-development">
+        <div class="div-dev-icons dev-icon9"><img src="images/Group-5787.svg" loading="lazy" alt="" class="icons-development">
           <div class="text-h3 black">Node</div>
         </div>
       </div>
