--- a/blogs.html
+++ b/blogs.html
@@ -14,6 +14,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/consulting.css" rel="stylesheet" type="text/css">
   <link href="css/uxmint-consulting.css" rel="stylesheet" type="text/css">
+  <link href="css/animation.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inter:300,regular,500,600","Noto Serif:regular,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -42,7 +43,7 @@
   <div class="section-new">
     <div class="wrapper w-container">
       <div class="w-layout-grid grid-blogs">
-        <div class="blogs-card">
+        <div class="blogs-card card1">
           <a target="_blank" href="https://medium.com/uxmint/how-to-experience-five-senses-in-digital-commerce-463eadc5ad66">
             <img src="images/Mask-Group-22.png" loading="lazy" alt="">
           <div class="div-blogs-title">
@@ -54,7 +55,7 @@
             <div class="project-owner-name">Veera Thiruppal</div>
           </div>
         </div>
-        <div class="blogs-card">
+        <div class="blogs-card card1">
           <a target="_blank" href="https://medium.com/uxmint/ever-thought-why-does-the-colour-green-or-sound-of-water-brings-calmness-6ecd72160fab">
           <img src="images/Mask-Group-21.png" loading="lazy" alt="">
           <div class="div-blogs-title">
@@ -67,7 +68,7 @@
             <div class="project-owner-name">Krithika Thirunavukkarasu</div>
           </div>
         </div>
-        <div class="blogs-card">
+        <div class="blogs-card card1">
           <a target="_blank" href="https://medium.com/uxmint/designing-a-successful-product-is-not-a-daydream-af92591078cd">
             <img src="images/blog-image-1.png" loading="lazy" alt="">
             <div class="div-blogs-title">
@@ -79,7 +80,7 @@
             <div class="project-owner-name">Udaya Kumar Sivagurunathan</div>
           </div>
         </div>
-        <div class="blogs-card">
+        <div class="blogs-card card2">
           <a target="_blank" href="https://medium.com/uxmint/design-exploration-in-my-4hrs-long-journey-2bac23227c6a">
           <img src="images/Mask Group 24.png" loading="lazy" alt="">
           <div class="div-blogs-title">
@@ -91,7 +92,7 @@
             <div class="project-owner-name">Syed Anees</div>
           </div>
         </div>
-        <div class="blogs-card">
+        <div class="blogs-card card2">
           <a target="_blank" href="https://medium.com/uxmint/the-ux-wheel-dc8ec27ef02e">
           <img src="images/Mask-Group-22.png" loading="lazy" alt="">
           <div class="div-blogs-title">
@@ -135,6 +136,8 @@
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f4886dc233ee29739aa35c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/consulting.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+  <script src="js/animation.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173088309-1"></script>
