--- a/event-managment.html
+++ b/event-managment.html
@@ -14,6 +14,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/consulting.css" rel="stylesheet" type="text/css">
   <link href="css/uxmint-consulting.css" rel="stylesheet" type="text/css">
+  <link href="css/animation.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inter:300,regular,500,600","Noto Serif:regular,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -71,11 +72,11 @@
   <div class="section-15">
     <div class="container-11 w-container">
       <div class="w-layout-grid grid-24">
-        <div><img src="images/Group-6398_1Group 6398.png" loading="lazy" alt="" class="image-7">
+        <div><img src="images/Group-6398_1Group 6398.png" loading="lazy" alt="" class="image-7 icon1">
           <div class="text-h3-3 black">Target Audience</div>
           <div class="text-h3-3 black">Venue Managers/Owners, Decorators, Photographers, Make-up artists, Stage Performers, Fashion Designers, Individuals Corporates in search of venue or event vendors</div>
         </div>
-        <div><img src="images/Group-6399_1Group 6399.png" loading="lazy" alt="" class="image-7">
+        <div><img src="images/Group-6399_1Group 6399.png" loading="lazy" alt="" class="image-7 icon2">
           <div class="text-h3-3 black">Strategy</div>
           <div class="text-h3-3 black">Helping the user to select the best Venue, Caterer, Photographer, Decorator, etc for their event by providing social proof, reviews from trusted sources, previous works, budget and comparison.</div>
         </div>
@@ -152,14 +153,24 @@
     </div>
     <div class="container-17 w-container">
       <div class="div-block-87">
-        <div class="w-layout-grid grid-28"><img src="images/Group-5820_1Group 5820.png" loading="lazy" alt=""><img src="images/Group-5821_1Group 5821.png" loading="lazy" alt=""><img src="images/Group-5822_1Group 5822.png" loading="lazy" alt=""><img src="images/Group-5823_1Group 5823.png" loading="lazy" alt=""><img src="images/Group-5824_1Group 5824.png" loading="lazy" alt=""><img src="images/Group-5819_1Group 5819.png" loading="lazy" alt=""><img src="images/Group-5817_1Group 5817.png" loading="lazy" alt=""><img src="images/Group-5816_1Group 5816.png" loading="lazy" alt=""><img src="images/Group-5818_1Group 5818.png" loading="lazy" alt=""><img src="images/Group-5815_1Group 5815.png" loading="lazy" alt=""></div>
+        <div class="w-layout-grid grid-28"
+        ><img class="dev-icon1" src="images/Group-5820_1Group 5820.png" loading="lazy" alt="">
+        <img class="dev-icon2" src="images/Group-5821_1Group 5821.png" loading="lazy" alt="">
+        <img class="dev-icon3" src="images/Group-5822_1Group 5822.png" loading="lazy" alt="">
+        <img class="dev-icon4" src="images/Group-5823_1Group 5823.png" loading="lazy" alt="">
+        <img class="dev-icon5" src="images/Group-5824_1Group 5824.png" loading="lazy" alt="">
+        <img class="dev-icon6" src="images/Group-5819_1Group 5819.png" loading="lazy" alt="">
+        <img class="dev-icon7" src="images/Group-5817_1Group 5817.png" loading="lazy" alt="">
+        <img class="dev-icon8" src="images/Group-5816_1Group 5816.png" loading="lazy" alt="">
+        <img class="dev-icon9" src="images/Group-5818_1Group 5818.png" loading="lazy" alt="">
+        <img class="dev-icon9" src="images/Group-5815_1Group 5815.png" loading="lazy" alt=""></div>
       </div>
     </div>
   </div>
   <div class="color-pallet">
     <div class="container-18 w-container">
       <div class="div-block-93">
-        <div class="div-block-92">
+        <div class="div-block-92 color-pallet-animation1">
           <div class="w-layout-grid grid-29">
             <div id="w-node-41d24415fc42-95a5a26c" class="div-block-89">
               <div class="text-color-pallete-1">Primary</div>
@@ -173,7 +184,7 @@
             </div>
           </div>
         </div>
-        <div class="div-block-94">
+        <div class="div-block-94 color-pallet-animation2">
           <div class="w-layout-grid grid-30">
             <div class="div-block-96">
               <div class="text-color-pallete-2">#59E8C3</div>
@@ -187,7 +198,7 @@
             </div>
           </div>
         </div>
-        <div class="div-block-103">
+        <div class="div-block-103 color-pallet-animation3">
           <div class="w-layout-grid grid-29">
             <div class="div-block-104">
               <div class="text-color-pallete-2">#59E8C3</div>
@@ -261,6 +272,8 @@
   <script src="js/consulting.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+  <script src="js/animation.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173088309-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
