--- a/usability-testing.html
+++ b/usability-testing.html
@@ -85,7 +85,7 @@
             <div class="slider-services-slide">
               <div class="w-layout-grid grid-14">
                 <div class="text-h2">Situations where usability testing will be of great use</div>
-                <div class="text-h3">End users are not using the product in the way it was intended to be used ? 🙄</div>
+                <div class="text-h3">End users are not using the product in the way it was intended to be used ?</div>
               </div>
             </div>
           </div>
