--- a/event-managment.html
+++ b/event-managment.html
@@ -72,11 +72,11 @@
   <div class="section-15">
     <div class="container-11 w-container">
       <div class="w-layout-grid grid-24">
-        <div><img src="images/Group-6398_1Group 6398.png" loading="lazy" alt="" class="image-7 icon1">
+        <div class="icon1"><img src="images/Group-6398_1Group 6398.png" loading="lazy" alt="" class="image-7">
           <div class="text-h3-3 black">Target Audience</div>
           <div class="text-h3-3 black">Venue Managers/Owners, Decorators, Photographers, Make-up artists, Stage Performers, Fashion Designers, Individuals Corporates in search of venue or event vendors</div>
         </div>
-        <div><img src="images/Group-6399_1Group 6399.png" loading="lazy" alt="" class="image-7 icon2">
+        <div class="icon2"><img src="images/Group-6399_1Group 6399.png" loading="lazy" alt="" class="image-7">
           <div class="text-h3-3 black">Strategy</div>
           <div class="text-h3-3 black">Helping the user to select the best Venue, Caterer, Photographer, Decorator, etc for their event by providing social proof, reviews from trusted sources, previous works, budget and comparison.</div>
         </div>
@@ -153,8 +153,8 @@
     </div>
     <div class="container-17 w-container">
       <div class="div-block-87">
-        <div class="w-layout-grid grid-28"
-        ><img class="dev-icon1" src="images/Group-5820_1Group 5820.png" loading="lazy" alt="">
+        <div class="w-layout-grid grid-28">
+        <img class="dev-icon1" src="images/Group-5820_1Group 5820.png" loading="lazy" alt="">
         <img class="dev-icon2" src="images/Group-5821_1Group 5821.png" loading="lazy" alt="">
         <img class="dev-icon3" src="images/Group-5822_1Group 5822.png" loading="lazy" alt="">
         <img class="dev-icon4" src="images/Group-5823_1Group 5823.png" loading="lazy" alt="">
