--- a/ui-development.html
+++ b/ui-development.html
@@ -54,19 +54,19 @@
       <div class="div-services-definition right-column">
         <div class="text-h4---22px black">Helping the business reach the customers seamlessly to provide omni-channel experience.</div>
         <div class="w-layout-grid grid-usability-methods">
-          <div class="grid-item-usability-methods"><img src="images/Group 6482.svg" loading="lazy" alt="" class="icons-usability-methods icon1">
+          <div class="grid-item-usability-methods icon1"><img src="images/Group 6482.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Understanding <br>Business</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6486.svg" loading="lazy" alt="" class="icons-usability-methods icon2">
+          <div class="grid-item-usability-methods icon2"><img src="images/Group 6486.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Platform</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6490.svg" loading="lazy" alt="" class="icons-usability-methods icon3">
+          <div class="grid-item-usability-methods icon3"><img src="images/Group 6490.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Framework</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6483.svg" loading="lazy" alt="" class="icons-usability-methods icon4">
+          <div class="grid-item-usability-methods icon4"><img src="images/Group 6483.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Manage</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6502.svg" loading="lazy" alt="" class="icons-usability-methods icon5">
+          <div class="grid-item-usability-methods icon5"><img src="images/Group 6502.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Testing</div>
           </div>
         </div>
