--- a/end-to-end-development.html
+++ b/end-to-end-development.html
@@ -14,6 +14,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/consulting.css" rel="stylesheet" type="text/css">
   <link href="css/uxmint-consulting.css" rel="stylesheet" type="text/css">
+  <link href="css/animation.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inter:300,regular,500,600","Noto Serif:regular,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -53,16 +54,16 @@
       <div class="div-services-definition right-column">
         <div class="text-h4---22px black">From design to development to implemation support, our consultants can do it all.</div>
         <div class="w-layout-grid grid-usability-methods">
-          <div class="grid-item-usability-methods"><img src="images/Group 6493.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon1"><img src="images/Group 6493.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Understanding <br>Systems<br></div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6494.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon2"><img src="images/Group 6494.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Backend<br>Framework</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6492.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon3"><img src="images/Group 6492.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>API<br>Web Service</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6504.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon4"><img src="images/Group 6504.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Scalability</div>
           </div>
         </div>
@@ -90,20 +91,20 @@
         </a>
       </div>
       <div class="w-layout-grid grid-development">
-        <div class="div-dev-icons"><img src="images/Group-5788.svg" loading="lazy" alt="" class="icons-development">
-          <div class="text-h3 black">Website</div>
+        <div class="div-dev-icons end-icon1"><img src="images/Group-5788.svg" loading="lazy" alt="" class="icons-development">
+          <div class="text-h3 black">Java</div>
         </div>
-        <div class="div-dev-icons"><img src="images/Group-5789.svg" loading="lazy" alt="" class="icons-development">
-          <div class="text-h3 black">Website</div>
+        <div class="div-dev-icons end-icon2"><img src="images/Group-5789.svg" loading="lazy" alt="" class="icons-development">
+          <div class="text-h3 black">Spring Boot</div>
         </div>
-        <div class="div-dev-icons"><img src="images/Group-5790.svg" loading="lazy" alt="" class="icons-development">
-          <div class="text-h3 black">Website</div>
+        <div class="div-dev-icons end-icon3"><img src="images/Group-5790.svg" loading="lazy" alt="" class="icons-development">
+          <div class="text-h3 black">PHP</div>
         </div>
-        <div class="div-dev-icons"><img src="images/Group-5791.svg" loading="lazy" alt="" class="icons-development">
-          <div class="text-h3 black">Website</div>
+        <div class="div-dev-icons end-icon4"><img src="images/Group-5791.svg" loading="lazy" alt="" class="icons-development">
+          <div class="text-h3 black">MongoDB</div>
         </div>
-        <div class="div-dev-icons"><img src="images/Group-5792.svg" loading="lazy" alt="" class="icons-development">
-          <div class="text-h3 black">Website</div>
+        <div class="div-dev-icons end-icon5"><img src="images/Group-5792.svg" loading="lazy" alt="" class="icons-development">
+          <div class="text-h3 black">SQL</div>
         </div>
       </div>
     </div>
@@ -195,7 +196,9 @@
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f4886dc233ee29739aa35c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="js/consulting.js" type="text/javascript"></script>
+  <script src="js/animation.js"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173088309-1"></script>
