--- a/ui-design.html
+++ b/ui-design.html
@@ -14,6 +14,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/consulting.css" rel="stylesheet" type="text/css">
   <link href="css/uxmint-consulting.css" rel="stylesheet" type="text/css">
+  <link href="css/animation.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inter:300,regular,500,600","Noto Serif:regular,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -58,22 +59,22 @@
       <div class="div-services-definition right-column">
         <div class="text-h4---22px black">Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI.</div>
         <div class="w-layout-grid grid-usability-methods">
-          <div class="grid-item-usability-methods"><img src="images/Group 6488.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon1"><img src="images/Group 6488.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Moodboard</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6491.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon2"><img src="images/Group 6491.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Visual Language</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6503.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon3"><img src="images/Group 6503.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Iconography</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6501.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon4"><img src="images/Group 6501.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Design systems</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6505.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon5"><img src="images/Group 6505.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Illustrations</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6495.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon6"><img src="images/Group 6495.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Brand identity</div>
           </div>
         </div>
@@ -336,8 +337,10 @@
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f4886dc233ee29739aa35c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="js/consulting.js" type="text/javascript"></script>
   <script src="js/consult.js" type="text/javascript"></script>
+  <script src="js/animation.js"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173088309-1"></script>
