--- a/usability-testing.html
+++ b/usability-testing.html
@@ -14,6 +14,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/consulting.css" rel="stylesheet" type="text/css">
   <link href="css/uxmint-consulting.css" rel="stylesheet" type="text/css">
+  <link href="css/animation.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inter:300,regular,500,600","Noto Serif:regular,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -58,19 +59,19 @@
       <div class="div-services-definition right-column">
         <div class="text-h4---22px black">It helps the business to evaluates the product or website before it is launched in the market by testing it with a sample population [small group of actual users.</div>
         <div class="w-layout-grid grid-usability-methods">
-          <div class="grid-item-usability-methods"><img src="images/Group 6480.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon1"><img src="images/Group 6480.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Understanding <br>User Objectives<br></div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6481.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon2"><img src="images/Group 6481.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Reduction in Development Cost</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6487.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon3"><img src="images/Group 6487.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Upfront Risk Mitigation</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6485.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon4"><img src="images/Group 6485.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Identifiying<br>Key Tasks</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group 6484.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods icon5"><img src="images/Group 6484.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Better<br>User Experience</div>
           </div>
         </div>
@@ -397,7 +398,7 @@
         <div class="grid-similar-projects-text">
           <div class="text-h2 black left">One of the interesting usability testing projects we worked on</div>
         </div>
-        <div class="proj-1"><img src="images/Automobile usability testing.png" loading="lazy" alt="" class="project-image">
+        <div class="proj-1 grid-usability"><img src="images/Automobile usability testing.png" loading="lazy" alt="" class="project-image">
           <div class="text-h2-5">Automobile Usability Testing</div>
           <a href="automobile-usability.html" class="text-button-link-1 w-inline-block">
             <div class="button-link-icon"></div>
@@ -435,9 +436,10 @@
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f4886dc233ee29739aa35c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="js/consulting.js" type="text/javascript"></script>
   <script src="js/consult.js" type="text/javascript"></script>
-
+  <script src="js/animation.js"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173088309-1"></script>
