--- a/about-us.html
+++ b/about-us.html
@@ -14,6 +14,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/consulting.css" rel="stylesheet" type="text/css">
   <link href="css/uxmint-consulting.css" rel="stylesheet" type="text/css">
+  <link href="css/animation.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inter:300,regular,500,600","Noto Serif:regular,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -52,7 +53,7 @@
     </div>
     <div class="wrapper w-container"></div>
   </div>
-  <div class="image-section"><img src="images/Mask Group 105.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
+  <div class="image-section slide-image"><img src="images/Mask Group 105.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
 
   <div class="section-new team">
     <div class="wrapper w-container">
@@ -85,7 +86,14 @@
         <div class="text-h2 black">We have built &amp; are building some great products together</div>
       </div>
       <div class="div-clients logo">
-        <div class="w-layout-grid grid-clients"><img src="images/sify.svg" loading="lazy" alt=""><img src="images/world-vision.svg" loading="lazy" alt=""><img src="images/sgv.svg" loading="lazy" alt=""><img src="images/l-n-t.svg" loading="lazy" alt=""><img src="images/fca.svg" loading="lazy" alt=""><img src="images/bfd.svg" loading="lazy" alt=""></div>
+        <div class="w-layout-grid grid-clients">
+          <img class="logo1" src="images/sify.svg" loading="lazy" alt="">
+          <img class="logo2" src="images/world-vision.svg" loading="lazy" alt="">
+          <img class="logo3" src="images/sgv.svg" loading="lazy" alt="">
+          <img class="logo4" src="images/l-n-t.svg" loading="lazy" alt="">
+          <img class="logo5" src="images/fca.svg" loading="lazy" alt="">
+          <img class="logo6" src="images/bfd.svg" loading="lazy" alt="">
+        </div>
       </div>
     </div>
   </div>
@@ -132,7 +140,9 @@
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f4886dc233ee29739aa35c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="js/consulting.js" type="text/javascript"></script>
+  <script src="js/animation.js"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173088309-1"></script>
