--- a/construction-portal.html
+++ b/construction-portal.html
@@ -114,7 +114,15 @@
   </div>
   <div class="container-17-construction w-container">
     <div class="div-block-87">
-      <div class="w-layout-grid grid-8-construction"><img src="images/Group 6669.png" loading="lazy" alt=""><img src="images/Group 6670.png" loading="lazy" alt=""><img src="images/Group 6671.png" loading="lazy" alt=""><img src="images/Group 6672.png" loading="lazy" alt=""><img src="images/Group 6673.png" loading="lazy" alt=""><img src="images/Group 6674.png" loading="lazy" alt=""><img src="images/Group 6675.png" loading="lazy" alt=""></div>
+      <div class="w-layout-grid grid-8-construction">
+        <img class="construction-icon1" src="images/Group 6669.png" loading="lazy" alt="">
+        <img class="construction-icon1" src="images/Group 6670.png" loading="lazy" alt="">
+        <img class="construction-icon1" src="images/Group 6671.png" loading="lazy" alt="">
+        <img class="construction-icon1" src="images/Group 6672.png" loading="lazy" alt="">
+        <img class="construction-icon1" src="images/Group 6673.png" loading="lazy" alt="">
+        <img class="construction-icon1" src="images/Group 6674.png" loading="lazy" alt="">
+        <img class="construction-icon1" src="images/Group 6675.png" loading="lazy" alt="">
+      </div>
     </div>
   </div>
   <div class="wireframe">
