--- a/health-care.html
+++ b/health-care.html
@@ -33,7 +33,7 @@
     <div class="w-layout-grid navigation-menu-grid-2"><a href="mailto:hello@uxmint.in" class="custom-nav-container-2 w-inline-block"><img src="images/email.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">hello@uxmint.in</div></a><a href="tel:+91 9884053886" class="custom-nav-container-2 w-inline-block"><img src="images/call-2.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">+919884053886</div></a><a href="tel:+91 919940410072" class="custom-nav-container-2 w-inline-block"><div class="text-navmenu-link">+919940410072</div></a><a href="https://medium.com/uxmint" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/icons8-medium-monogram.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/linked-in-square-button.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a></div><a data-w-id="8a4fddf2-7cc4-77c8-ac00-81affe90f4c3" href="#" class="navclose w-inline-block"><img src="images/close-1.svg" loading="lazy" width="20" alt=""></a>
   </div>
   <div class="sectionhero-csa">
-    <div class="wrapper1 csa w-container"><img src="images/csa 1.jpg" loading="lazy" srcset="images/csa 1-p-500.jpg 500w, images/csa 1.jpg 779w" sizes="(max-width: 479px) 100vw, (max-width: 973px) 80vw, (max-width: 991px) 779px, 100vw" alt=""></div>
+    <div class="wrapper1 csa w-container"><img src="images/csa 1.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 973px) 80vw, (max-width: 991px) 779px, 100vw" alt=""></div>
   </div>
   <div class="section-12">
     <div class="case-study-wrapper w-container">
@@ -58,7 +58,7 @@
       </div>
     </div>
   </div>
-  <div class="image-section"><img src="images/csa 2.jpg" loading="lazy" srcset="images/csa 2-p-500.jpg 500w, images/csa 2-p-800.jpg 800w, images/csa 2-p-1080.jpg 1080w, images/csa 2.jpg 1366w" sizes="100vw" alt="" class="image-11"></div>
+  <div class="image-section"><img src="images/csa 2.jpg" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
   <div class="section-14">
     <div class="container-10 w-container">
       <div class="div-block-79">
@@ -119,7 +119,7 @@
     </div>
   </div>
   <div class="wireframe">
-    <div class="container-csa w-container"><img src="images/csa 3.png" loading="lazy" srcset="images/csa 3-p-500.png 500w, images/csa 3-p-800.png 800w, images/csa 3-p-1080.png 1080w, images/csa 3.png 1260w" sizes="94vw" alt="" class="image-13"></div>
+    <div class="container-csa w-container"><img src="images/csa 3.png" loading="lazy" sizes="94vw" alt="" class="image-13"></div>
   </div>
   <div class="section-17-health">
     <div class="container-13 w-container">
@@ -130,18 +130,18 @@
     </div>
   </div>
   <div class="visual-design">
-    <div class="container-23 w-container"><img src="images/csa 4.png" loading="lazy" srcset="images/csa 4-p-500.png 500w, images/csa 4-p-800.png 800w, images/csa 4-p-1080.png 1080w, images/csa 4.png 1367w" sizes="100vw" alt="" class="image-12"></div>
+    <div class="container-23 w-container"><img src="images/csa 4.png" loading="lazy" sizes="100vw" alt="" class="image-12"></div>
   </div>
   <div class="branding">
     <div class="container-csa2 w-container">
       <div class="div-block-85">
         <div class="text-h2-2 black">Build a design system that could be used through their multiple user portals</div>
       </div>
-      <div class="container-csa w-container"><img src="images/csa 5.png" loading="lazy" srcset="images/csa 5-p-500.png 500w, images/csa 5-p-800.png 800w, images/csa 5-p-1080.png 1080w, images/csa 5.png 1260w" sizes="94vw" alt="" class="image-13"></div>
+      <div class="container-csa w-container"><img src="images/csa 5.png" loading="lazy" sizes="94vw" alt="" class="image-13"></div>
     </div>
   </div>
   <div class="visual-design">
-    <div class="container-23 w-container"><img src="images/csa 6.png" loading="lazy" srcset="images/csa 6-p-500.png 500w, images/csa 6-p-800.png 800w, images/csa 6-p-1080.png 1080w, images/csa 6.png 1367w" sizes="100vw" alt="" class="image-12"></div>
+    <div class="container-23 w-container"><img src="images/csa 6.png" loading="lazy" sizes="100vw" alt="" class="image-12"></div>
   </div>
   <div class="section-projects">
     <div class="wrapper1 project-1 w-container">
