--- a/uxahead.html
+++ b/uxahead.html
@@ -33,7 +33,7 @@
     <div class="w-layout-grid navigation-menu-grid-2"><a href="mailto:hello@uxmint.in" class="custom-nav-container-2 w-inline-block"><img src="images/email.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">hello@uxmint.in</div></a><a href="tel:+91 9884053886" class="custom-nav-container-2 w-inline-block"><img src="images/call-2.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">+919884053886</div></a><a href="tel:+91 919940410072" class="custom-nav-container-2 w-inline-block"><div class="text-navmenu-link">+919940410072</div></a><a href="https://medium.com/uxmint" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/icons8-medium-monogram.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/linked-in-square-button.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a></div><a data-w-id="8a4fddf2-7cc4-77c8-ac00-81affe90f4c3" href="#" class="navclose w-inline-block"><img src="images/close-1.svg" loading="lazy" width="20" alt=""></a>
   </div>
   <div class="sectionhero-uxahead">
-    <div class="wrapper1 uxahead w-container"><img src="images/uxahead 1.png" loading="lazy" srcset="images/uxahead 1-p-500.png 500w, images/uxahead 1.png 779w" sizes="(max-width: 479px) 100vw, (max-width: 973px) 80vw, (max-width: 991px) 779px, 100vw" alt=""></div>
+    <div class="wrapper1 uxahead w-container"><img src="images/uxahead 1.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 973px) 80vw, (max-width: 991px) 779px, 100vw" alt=""></div>
   </div>
   <div class="section-12">
     <div class="case-study-wrapper w-container">
@@ -59,7 +59,7 @@
       </div>
     </div>
   </div>
-  <div class="image-section"><img src="images/uxahead 2.png" loading="lazy" srcset="images/uxahead 2-p-500.png 500w, images/uxahead 2-p-800.png 800w, images/uxahead 2-p-1080.png 1080w, images/uxahead 2.png 1366w" sizes="100vw" alt="" class="image-11"></div>
+  <div class="image-section"><img src="images/uxahead 2.jpg" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
   <div class="section-14">
     <div class="container-10 w-container">
       <div class="div-block-79">
@@ -96,7 +96,7 @@
         <div class="text-h3-2 black">Wireframes</div>
       </div>
     </div>
-    <div class="container-22-uxahead w-container"><img src="images/uxahead 3.png" loading="lazy" srcset="images/uxahead 3-p-500.png 500w, images/uxahead 3-p-800.png 800w, images/uxahead 3-p-1080.png 1080w, images/uxahead 3.png 1260w" sizes="94vw" alt="" class="image-13"></div>
+    <div class="container-22-uxahead w-container"><img src="images/uxahead 3.png" loading="lazy" sizes="94vw" alt="" class="image-13"></div>
   </div>
   <div class="visual-design">
     <div class="container-14 w-container">
@@ -104,7 +104,7 @@
         <div class="text-h3-2 black">Intraction Design</div>
       </div>
     </div>
-    <div class="container-23 w-container"><img src="images/uxahead 4.png" loading="lazy" srcset="images/uxahead 4-p-500.png 500w, images/uxahead 4-p-800.png 800w, images/uxahead 4-p-1080.png 1080w, images/uxahead 4.png 1367w" sizes="100vw" alt="" class="image-12"></div>
+    <div class="container-23 w-container"><img src="images/uxahead 4.png" loading="lazy" sizes="100vw" alt="" class="image-12"></div>
   </div>
   <div class="branding">
     <div class="container-14 w-container">
@@ -121,11 +121,11 @@
         <div class="w-layout-grid grid-27"><img src="images/uxahead 5.png" loading="lazy" alt=""></div>
       </div>
     </div>
-    <div class="container-23 w-container"><img src="images/uxahead 6.png" loading="lazy" srcset="images/uxahead 6-p-500.png 500w, images/uxahead 6-p-800.png 800w, images/uxahead 6-p-1080.png 1080w, images/uxahead 6.png 1367w" sizes="100vw" alt="" class="image-12"></div>
+    <div class="container-23 w-container"><img src="images/uxahead 6.png" loading="lazy" sizes="100vw" alt="" class="image-12"></div>
   </div>
   <div class="color-pallet">
     <div class="container-19-uxahead w-container">
-      <div class="div-block-88"><img src="images/uxahead 7.png" loading="lazy" srcset="images/uxahead 7-p-500.png 500w, images/uxahead 7-p-800.png 800w, images/uxahead 7-p-1080.png 1080w, images/uxahead 7.png 1367w" sizes="100vw" alt="" class="image-12"></div>
+      <div class="div-block-88"><img src="images/uxahead 7.png" loading="lazy" sizes="100vw" alt="" class="image-12"></div>
     </div>
   </div>
   <div class="wireframe">
@@ -134,7 +134,7 @@
         <div class="text-h3-2 black">Illustrations</div>
       </div>
     </div>
-    <div class="container-22-uxahead w-container"><img src="images/uxahead 8.png" loading="lazy" srcset="images/uxahead 8-p-500.png 500w, images/uxahead 8-p-800.png 800w, images/uxahead 8-p-1080.png 1080w, images/uxahead 8.png 1260w" sizes="94vw" alt="" class="image-13"></div>
+    <div class="container-22-uxahead w-container"><img src="images/uxahead 8.png" loading="lazy" sizes="94vw" alt="" class="image-13"></div>
   </div>
   <div class="wireframe">
     <div class="container-14 w-container">
@@ -142,7 +142,7 @@
         <div class="text-h3-2 black">Business Card</div>
       </div>
     </div>
-    <div class="container-22-uxahead w-container"><img src="images/uxahead 9.png" loading="lazy" srcset="images/uxahead 9-p-500.png 500w, images/uxahead 9-p-800.png 800w, images/uxahead 9-p-1080.png 1080w, images/uxahead 9.png 1260w" sizes="94vw" alt="" class="image-13"></div>
+    <div class="container-22-uxahead w-container"><img src="images/uxahead 9.png" loading="lazy" sizes="94vw" alt="" class="image-13"></div>
   </div>
   <div class="section-projects">
     <div class="wrapper1 project-1 w-container">
