--- a/about-us.html
+++ b/about-us.html
@@ -35,7 +35,7 @@
     <div class="wrapper hero w-container">
       <div class="text-accent-1">ABOUT US</div>
       <div class="heading-container">
-        <div class="text-h1">There is always a better way to do it <a style="color: #fa4e2e; cursor: unset;">&amp; we find it</a></div>
+        <div class="text-h1_1">There is always a better way to do it <a style="color: #fa4e2e; cursor: unset;">&amp; we find it</a></div>
       </div>
       <div class="container-hero-subtitle">
         <div class="text-h3 black">said Thomas Alva Edison</div>
