--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
       <div class="div-block-123 cd-headline slide">
         <div class="text-h1">We Bring 
           <span class="cd-words-wrapper" style="width: 100%;">
-            <b class="is-visible"> Digital transformation <br>through design</b>
+            <b class="is-visible"> Digital transformation <br> through design</b>
             <b> Technology, Innovation <br> & Humanness together</b>
+            <b> Happiness through <br> Customer Experience Design</b>
             </span>
         </div>
       </div>
