Home - UI fixes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <section class="cd-intro">
       <div class="div-block-123 cd-headline slide">
-        <div class="text-h1" style="font-weight: 100;">We Bring 
+        <div class="text-h1" style="font-weight: 100;">We bring 
           <span class="cd-words-wrapper" style="width: 100%;">
             <b class="is-visible"> Digital transformation <br> through design</b>
             <b> Technology, Innovation <br> & Humanness together</b>
