--- a/blogs.html
+++ b/blogs.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f5d90582a83fd2f1aa37656" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>uxmint design - Blogs</title>
+  <title>Uxmint Design - Blogs</title>
   <meta name="description" content="MINTify your thoughts with our latest blogs and articles." />
   <meta name="keywords" content="Experience design, interface design, branding, product design, product development, Uxui, ux design, ux research, customer experience, cx strategy, strategy design, design studio, digital transformation, graphic design, ui design, user experience, uxd, xd, design consulting, design consultants, app design">
   <meta content="blogs" property="og:title">
