--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f62f766bf647b1967d8fefd" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>uxmint design - Contact Us</title>
+  <title>Uxmint Design - Contact Us</title>
   <meta name="description" content="We are eager to collaborate for Design Strategy or Customer Experience for your business." />
   <meta name="keywords" content="Experience design, interface design, branding, product design, product development, Uxui, ux design, ux research, customer experience, cx strategy, strategy design, design studio, digital transformation, graphic design, ui design, user experience, uxd, xd, design consulting, design consultants, app design">
   <meta content="Contact" property="og:title">
