--- a/end-to-end-development.html
+++ b/end-to-end-development.html
@@ -4,8 +4,8 @@
 <html data-wf-page="5f6491d00506c680f3022257" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>uxmint design - Services</title>
-  <meta name="description" content="Designing scalable platform harnessing the technology for business reach to their end users with the better user experience, engagement and adaptablity." />
+  <title>Uxmint Design - Services</title>
+  <meta name="description" content="Designing scalable platform with an eye for customer experience." />
   <meta name="keywords" content="Product Development, app development, back-end development, cx strategy, strategy design, design studio, digital transformation, graphic design, ui design, user experience, uxd, xd, design consulting, design consultants, app design">
   <meta content="services backend development" property="og:title">
   <meta content="services backend development" property="twitter:title">
