--- a/event-managment.html
+++ b/event-managment.html
@@ -4,8 +4,8 @@
 <html data-wf-page="5f6b59431dde08da95a5a26c" data-wf-site="5f6b56e1763ff97ee6f130d9">
 <head>
   <meta charset="utf-8">
-  <title>uxmint design - Case Studies</title>
-  <meta name="description" content="Redesign of events management portal to search and connect the network of professionals across multiple discipline to bring the customer the best of best experience within their budget." />
+  <title>Uxmint Design - Case Studies</title>
+  <meta name="description" content="Case Study of Events Management Portal serving B2B2C segment." />
   <meta name="keywords" content="Portfolio, UX portfolio, UI  portfolio, bigfday, events management, networking, business solution, responsive web design, website design, ux app, mobile ux, interface design, ui mobile, ios ui design, ui designing, ui/ux, ui and ux design, app ui design, mobile app ui design, mobile ui design, mobile ux design, web ui design, mobile design, best mobile sites, android ui design, iOS design, mobile ux design samples, best ui designs, good ux design, design india">
   <meta content="case study" property="og:title">
   <meta content="case study" property="twitter:title">
