--- a/services.html
+++ b/services.html
@@ -4,8 +4,8 @@
 <html data-wf-page="5f5da42110a7854ffada28e2" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>uxmint design - Services</title>
-  <meta name="description" content="Enhance your product with the right design strategy and customer experience." />
+  <title>Uxmint Design - Services</title>
+  <meta name="description" content="Enhance your Product with the right Design Strategy and Customer Experience." />
   <meta name="keywords" content="Experience design, interface design, branding, product design, product development, Uxui, ux design, ux research, customer experience, cx strategy, strategy design, design studio, digital transformation, graphic design, ui design, user experience, uxd, xd, design consulting, design consultants, app design">
   <meta content="services" property="og:title">
   <meta content="services" property="twitter:title">
