--- a/ui-design.html
+++ b/ui-design.html
@@ -4,8 +4,8 @@
 <html data-wf-page="5f6348230bb01c4d45ecd664" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>uxmint design - Services</title>
-  <meta name="description" content="Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI." />
+  <title>Uxmint Design - Services</title>
+  <meta name="description" content="Interface Desing - Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI." />
   <meta name="keywords" content="Interaction Design, wireframes, Experience design, interface design, branding, product design, product development, Uxui, ux design, ux research, customer experience, cx strategy, strategy design, design studio, digital transformation, graphic design, ui design, user experience, uxd, xd, design consulting, design consultants, app design">
   <meta content="services-interface design" property="og:title">
   <meta content="services-interface design" property="twitter:title">
