--- a/ui-development.html
+++ b/ui-development.html
@@ -4,8 +4,8 @@
 <html data-wf-page="5f64572fdcb3f4620587ba63" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>uxmint design - Services</title>
-  <meta name="description" content="The design comes to life when the robust technologies are put in place to bring the best Experience." />
+  <title>Uxmint Design - Services</title>
+  <meta name="description" content="UI Development - The design comes to life when the robust technologies are put in place to bring the best Experience." />
   <meta name="keywords" content="UI Development, app development, front-end development, cx strategy, strategy design, design studio, digital transformation, graphic design, ui design, user experience, uxd, xd, design consulting, design consultants, app design">
   <meta content="services ui development" property="og:title">
   <meta content="services ui development" property="twitter:title">
