--- a/usability-testing.html
+++ b/usability-testing.html
@@ -4,8 +4,8 @@
 <html data-wf-page="5f5e0209d14a8541929b0f1d" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>uxmint design - Services</title>
-  <meta name="description" content="Reduce the risk of usability issues before the product launch into the market." />
+  <title>Uxmint Design - Services</title>
+  <meta name="description" content="Usability Testing - Reduce the risk of usability issues before the product launch into the market." />
   <meta name="keywords" content="Usability testing, user testing, exploratory testing, launch preparedness, experience design, remote user testing, iterative testing, product testing, analytics, user analytics">
   <meta content="services-usabilitytesting" property="og:title">
   <meta content="services-usabilitytesting" property="twitter:title">
