--- a/ux-consulting.html
+++ b/ux-consulting.html
@@ -4,8 +4,8 @@
 <html data-wf-page="5f649bd3f6981230616bee85" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>uxmint design - Services</title>
-  <meta name="description" content="Unravelling solutions for business problems in alignment with end-user expectations. Creating functional, Usable, Pleasurable Unique digital products." />
+  <title>Uxmint Design - Services</title>
+  <meta name="description" content="Experience Design - Unravelling solutions for business problems in alignment with end-user expectations. Creating functional, Usable, Pleasurable Unique digital products." />
   <meta name="keywords" content="Experience design, interface design, branding, product design, product development, Uxui, ux design, ux research, customer experience, cx strategy, strategy design, design studio, digital transformation, graphic design, ui design, user experience, uxd, xd, design consulting, design consultants, app design">
   <meta content="services user experience" property="og:title">
   <meta content="services user experience" property="twitter:title">
