--- a/child-care-portal.html
+++ b/child-care-portal.html
@@ -4,8 +4,8 @@
 <html data-wf-page="5f6b59431dde08da95a5a26c" data-wf-site="5f6b56e1763ff97ee6f130d9">
 <head>
   <meta charset="utf-8">
-  <title>uxmint design - Case Studies</title>
-  <meta name="description" content="A worldwide NGO approached us for thier PoC on tablet based application for children in under-previlidged countries which will be used on shared tablets by multiple children." />
+  <title>Uxmint Design - Case Studies</title>
+  <meta name="description" content="Case Study for Child Care Portal nurturing kids worldwide." />
   <meta name="keywords" content="Portfolio, UX portfolio, UI  portfolio, ReferralYogi, SaaS, component design, service design, business solution, responsive web design, website design, ux app, mobile ux, interface design, ui mobile, ios ui design, ui designing, ui/ux, ui and ux design, app ui design, mobile app ui design, mobile ui design, mobile ux design, web ui design, mobile design, best mobile sites, android ui design, iOS design, mobile ux design samples, best ui designs, good ux design, design india">
   <meta content="case study" property="og:title">
   <meta content="case study" property="twitter:title">
