--- a/health-care.html
+++ b/health-care.html
@@ -4,8 +4,8 @@
 <html data-wf-page="5f6b59431dde08da95a5a26c" data-wf-site="5f6b56e1763ff97ee6f130d9">
 <head>
   <meta charset="utf-8">
-  <title>uxmint design - Case Studies</title>
-  <meta name="description" content="Holistic healthcare system for the primary healthcare centers in remote hamlets to enable doctors, healthcare workers." />
+  <title>Uxmint Design - Case Studies</title>
+  <meta name="description" content="Case Study of an Holistic Healthcare System Design for the primary healthcare centers in remote hamlets to enable doctors, healthcare workers." />
   <meta name="keywords" content="Portfolio, UX portfolio, UI  portfolio, Sugavazhvu, Health Care, enterprise design, service design, business solution, responsive web design, website design, ux app, mobile ux, interface design, ui mobile, ios ui design, ui designing, ui/ux, ui and ux design, app ui design, mobile app ui design, mobile ui design, mobile ux design, web ui design, mobile design, best mobile sites, android ui design, iOS design, mobile ux design samples, best ui designs, good ux design, design india">
   <meta content="case study" property="og:title">
   <meta content="case study" property="twitter:title">
