--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f4886dc233ee22607aa35c2" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>uxmint design</title>
+  <title>Uxmint Design</title>
   <meta name="description" content="Holistic Design Studio with industry experts specialising in research based Experience Design (UX), Interface Design (UI), Branding and Product Design and Development." />
   <meta name="keywords" content="Experience design, interface design, branding, product design, product development, Uxui, ux design, ux research, customer experience, cx strategy, strategy design, design studio, digital transformation, graphic design, ui design, user experience, uxd, xd, design consulting, design consultants, app design">
   <meta content="width=device-width, initial-scale=1" name="viewport">
