poster image added

--- a/index.html
+++ b/index.html
@@ -60,26 +60,11 @@
       </section>
     </div>
   </div>
-  <!-- <div class="section-video">
-    <div class="wrapper w-container"></div>
-  </div> -->
-  <!-- <div class="section-new banner-video">
-    <div class="wrapper w-container">
-      <div style="padding-top:56.17021276595745%;width:0%" id="w-node-7ca773287681-07aa35c2" data-w-id="4de59417-6fce-924d-181c-7ca773287681" class="w-embed-youtubevideo">
-        <iframe src="images/ShowReel Uxmint low res.mp4" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-      </div>
-    </div>
-  </div> -->
   <div class="section-new banner-video">
-    <video class="video" controls>
-      <source src="images/ShowReel Uxmint low res.mp4" type="video/mp4">
+    <video class="video" controls poster="images/uxmint-image.png">
+      <source src="images/uxmint-video.mp4" type="video/mp4">
     </video>
   </div>
-  <!-- <div class="image-section">
-   <div class="banner-animation">
-    <img src="images/Mask Group 107@2x.jpg" loading="lazy" sizes="100vw" alt="" class="image-11">
-  </div>
-</div> -->
   <div class="section-new black">
     <div class="wrapper what-we-do w-container">
       <div class="w-layout-grid grid-what-we-do">
