--- a/index.html
+++ b/index.html
@@ -60,11 +60,16 @@
       </section>
     </div>
   </div>
-  <div class="section-new banner-video">
+  <!-- <div class="section-new banner-video">
     <video class="video" controls poster="images/uxmint-image.png">
       <source src="images/uxmint-video.mp4" type="video/mp4">
     </video>
+  </div> -->
+  <div class="image-section">
+   <div class="banner-animation">
+    <img src="images/Mask Group 107@2x.jpg" loading="lazy" sizes="100vw" alt="" class="image-11">
   </div>
+</div>
   <div class="section-new black">
     <div class="wrapper what-we-do w-container">
       <div class="w-layout-grid grid-what-we-do">
