--- a/networking.html
+++ b/networking.html
@@ -169,7 +169,7 @@
     <div class="container-31 w-container"></div>
     <div class="container-32 w-container"></div>
   </div>
-  <div class="image-section"><img src="images/Sify Deskyop design.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
+  <div class="image-section"><img src="images/Sify Desktop design.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
   <div class="section-projects">
     <div class="wrapper1 project-1 w-container">
       <div class="case-study-heading-2">
