career page added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
   </div>
   <!-- <div class="section-new banner-video">
-    <video class="video" controls poster="images/Gif-image.gif">
+    <video class="video" controls poster="images/uxmint-image.png">
       <source src="images/uxmint-video.mp4" type="video/mp4">
     </video>
   </div> -->
