--- a/services.html
+++ b/services.html
@@ -160,7 +160,7 @@
       </div>
     </div>
   </div>
-  <div class="section-new-5">
+  <!-- <div class="section-new-5">
     <div class="wrapper-5 w-container">
       <div class="services-type">
         <div class="text-h2-2 black left">We can cater our services to your needs</div>
@@ -412,8 +412,8 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="section-new-4">
+  </div> -->
+  <!-- <div class="section-new-4">
     <div class="wrapper-6 services w-container">
       <div class="services-type-2">
         <div class="text-h2-2 black">We can cater our services to your needs</div>
@@ -510,7 +510,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="section-footer">
     <div class="footer-wrapper w-container">
       <div class="footer-idea">
