--- a/services.html
+++ b/services.html
@@ -332,7 +332,7 @@
           </div>
           <div class="tabs-content-3 w-tab-content">
             <div data-w-tab="Tab 1" class="tab-pane-tab-1 w-tab-pane">
-              <div class="w-layout-grid grid-2-column">
+              <div class="w-layout-grid grid-2-column-service">
                 <div class="text-h2-2 black left">Enterprise Application</div>
                 <div>
                   <div class="text-h3-3 black">Prioritizing the road map with the key features involved is the key for
@@ -344,7 +344,7 @@
               </div>
             </div>
             <div data-w-tab="Tab 2" class="w-tab-pane">
-              <div class="w-layout-grid grid-2-column">
+              <div class="w-layout-grid grid-2-column-service">
                 <div class="text-h2-2 black left">Information Portal</div>
                 <div>
                   <div class="text-h3-3 black">We discuss with the stakeholders to set the pitch and get the inputs of
@@ -355,7 +355,7 @@
               </div>
             </div>
             <div data-w-tab="Tab 3" class="w-tab-pane">
-              <div class="w-layout-grid grid-2-column">
+              <div class="w-layout-grid grid-2-column-service">
                 <div class="text-h2-2 black left">Product Development</div>
                 <div>
                   <div class="text-h3-3 black">We help to bring a product live beginning from ideation to market launch.
@@ -369,7 +369,7 @@
               </div>
             </div>
             <div data-w-tab="Tab 4" class="w-tab-pane">
-              <div class="w-layout-grid grid-2-column">
+              <div class="w-layout-grid grid-2-column-service">
                 <div class="text-h2-2 black left">Digital Transformation</div>
                 <div>
                   <div class="text-h3-3 black">We help clients transform their legacy system by reimagining their process
@@ -385,7 +385,7 @@
               </div>
             </div>
             <div data-w-tab="Tab 5" class="w-tab-pane">
-              <div class="w-layout-grid grid-2-column">
+              <div class="w-layout-grid grid-2-column-service">
                 <div class="text-h2-2 black left">Strategy Design</div>
                 <div>
                   <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -396,7 +396,7 @@
               </div>
             </div>
             <div data-w-tab="Tab 6" class="w-tab-pane">
-              <div class="w-layout-grid grid-2-column">
+              <div class="w-layout-grid grid-2-column-service">
                 <div class="text-h2-2 black left">Controlled Environment <br>testing</div>
                 <div>
                   <div class="text-h3-3 black">Mobile Apps have the potential to increase the business productivity
