--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         <div class="text-accent-1">CONTACT</div>
       </div>
       <div class="heading-container">
-        <div class="text-h1-contact">We are eager to get in touch with you as well.</div>
+        <div class="text-h1">We are eager to get in touch with you as well.</div>
       </div>
       <div class="container-hero-subtitle">
         <div class="text-h3 black">You can drop us an email at</div><a href="mailto:hello@uxmint.in" class="text-button-link-1 lower-case">hello@uxmint.in</a></div>
