--- a/services.html
+++ b/services.html
@@ -208,7 +208,7 @@
                       transform="translate(11124 10465)" fill="#fff" opacity="0"></rect>
                   </g>
                 </svg></div>
-              <div>Enterprise <br>Application</div>
+              <div>Enterprise <br>Applications</div>
             </a>
             <a data-w-tab="Tab 2" class="tab-link-3 w-inline-block w-tab-link">
               <div class="html-embed-3 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
@@ -228,7 +228,7 @@
                     </g>
                   </g>
                 </svg></div>
-              <div>Information<br>Portal</div>
+              <div>Information<br>Portals</div>
             </a>
             <a data-w-tab="Tab 3" class="tab-link-3 w-inline-block w-tab-link">
               <div class="html-embed-3 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="40.095" height="40"
@@ -327,13 +327,13 @@
                       transform="translate(11545 10684)" fill="#fff" opacity="0"></rect>
                   </g>
                 </svg></div>
-              <div>Mobile<br>Application</div>
+              <div>Mobile<br>Applications</div>
             </a>
           </div>
           <div class="tabs-content-3 w-tab-content">
             <div data-w-tab="Tab 1" class="tab-pane-tab-1 w-tab-pane">
               <div class="w-layout-grid grid-2-column-service">
-                <div class="text-h2-2 black left">Enterprise Application</div>
+                <div class="text-h2-2 black left">Enterprise Applications</div>
                 <div>
                   <div class="text-h3-3 black">Prioritizing the road map with the key features involved is the key for
                     designing Enterprise Applications. It  involves closely working with the internal business and product
@@ -345,7 +345,7 @@
             </div>
             <div data-w-tab="Tab 2" class="w-tab-pane">
               <div class="w-layout-grid grid-2-column-service">
-                <div class="text-h2-2 black left">Information Portal</div>
+                <div class="text-h2-2 black left">Information Portals</div>
                 <div>
                   <div class="text-h3-3 black">We discuss with the stakeholders to set the pitch and get the inputs of
                     target audience to focus on customer engagement  and conversion. Build the face of your business that
@@ -397,7 +397,7 @@
             </div>
             <div data-w-tab="Tab 6" class="w-tab-pane">
               <div class="w-layout-grid grid-2-column-service">
-                <div class="text-h2-2 black left">Controlled Environment <br>testing</div>
+                <div class="text-h2-2 black left">Mobile Applications</div>
                 <div>
                   <div class="text-h3-3 black">Mobile Apps have the potential to increase the business productivity
                     multifold by being in the field. Helps your product to reach masses and plays a critical role for
@@ -422,11 +422,11 @@
         <div class="w-layout-grid grid-services-type-2">
           <a href="#Enterprise-Application" class="services-block w-inline-block">
             <div class="services-grid-icon"><img src="images/Group-5689.svg" loading="lazy" alt=""></div>
-            <div class="text-h5-grey-3">Enterprise <br>Application</div>
+            <div class="text-h5-grey-3">Enterprise <br>Applications</div>
           </a>
           <a href="#Information-Portal" class="services-block w-inline-block">
             <div class="services-grid-icon"><img src="images/Group-5684.svg" loading="lazy" alt=""></div>
-            <div class="text-h5-grey-3">Information <br>Portal</div>
+            <div class="text-h5-grey-3">Information <br>Portals</div>
           </a>
           <a href="#Product-Development" class="services-block w-inline-block">
             <div class="services-grid-icon"><img src="images/Group-5742.svg" loading="lazy" alt=""></div>
@@ -442,11 +442,11 @@
           </a>
           <a href="#Mobile-application" class="services-block w-inline-block">
             <div class="services-grid-icon"><img src="images/Group-5690.svg" loading="lazy" alt=""></div>
-            <div class="text-h5-grey-3">Mobile <br>Application</div>
+            <div class="text-h5-grey-3">Mobile <br>Applications</div>
           </a>
         </div>
         <div id="Enterprise-Application" class="w-layout-grid grid-2-column-3">
-          <div class="text-h2-2 black left">Enterprise Application</div>
+          <div class="text-h2-2 black left">Enterprise Applications</div>
           <div>
             <div class="text-h3-3 black">Prioritizing the road map with the key features involved is the key for designing
               Enterprise Applications. It  involves closely working with the internal business and product teams; aligning
@@ -456,7 +456,7 @@
           </div>
         </div>
         <div id="Information-Portal" class="w-layout-grid grid-2-column-3">
-          <div class="text-h2-2 black left">Information Portal</div>
+          <div class="text-h2-2 black left">Information Portals</div>
           <div>
             <div class="text-h3-3 black">We discuss with the stakeholders to set the pitch and get the inputs of target
               audience to focus on customer engagement  and conversion. Build the face of your business that speaks of the
@@ -498,7 +498,7 @@
           </div>
         </div>
         <div id="Mobile-application" class="w-layout-grid grid-2-column-3">
-          <div class="text-h2-2 black left">Mobile Application</div>
+          <div class="text-h2-2 black left">Mobile Applications</div>
           <div>
             <div class="text-h3-3 black">Mobile Apps have the potential to increase the business productivity multifold by
               being in the field. Helps your product to reach masses and plays a critical role for reaching the customers.
