--- a/services.html
+++ b/services.html
@@ -168,7 +168,7 @@
       <div class="services-type column-2">
         <div data-duration-in="500" data-duration-out="500" class="tabs-6 w-tabs">
           <div class="tabs-menu-9 w-tab-menu">
-            <a data-w-tab="Tab 1" class="tab-link-3 w-inline-block w-tab-link">
+            <a data-w-tab="Tab 1" class="tab-link-3 w-inline-block w-tab-link w--current">
               <div class="html-embed-3 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
                   viewbox="0 0 40 40">
                   <g id="Group_6732" data-name="Group 6732" transform="translate(-11124 -10465)">
@@ -331,7 +331,7 @@
             </a>
           </div>
           <div class="tabs-content-3 w-tab-content">
-            <div data-w-tab="Tab 1" class="tab-pane-tab-1 w-tab-pane">
+            <div data-w-tab="Tab 1" class="tab-pane-tab-1 w-tab-pane w--tab-active">
               <div class="w-layout-grid grid-2-column-service">
                 <div class="text-h2-2 black left">Enterprise Applications</div>
                 <div>
